// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Course queries course admin returns full course on id and slug 1`] = `
Object {
  "automatic_completions": true,
  "automatic_completions_eligible_for_ects": true,
  "completions_handled_by": null,
  "course_aliases": Array [
    Object {
      "course_code": "alias",
      "id": "67000000-0000-0000-0000-000000000001",
    },
  ],
  "course_tags": Array [
    Object {
      "tag": Object {
        "color": "#ff0000",
        "id": "48100000-0000-0000-0000-000000000001",
        "tag_translations": Array [
          Object {
            "description": "tag1 description",
            "language": "en_US",
            "name": "tag1 in english",
          },
          Object {
            "description": "tag1 kuvaus",
            "language": "fi_FI",
            "name": "tag1 in finnish",
          },
        ],
      },
    },
    Object {
      "tag": Object {
        "color": "#00ff00",
        "id": "48100000-0000-0000-0000-000000000002",
        "tag_translations": Array [
          Object {
            "description": "tag2 description",
            "language": "en_US",
            "name": "tag2 in english",
          },
          Object {
            "description": "tag2 kuvaus",
            "language": "fi_FI",
            "name": "tag2 in finnish",
          },
        ],
      },
    },
  ],
  "course_translations": Array [
    Object {
      "description": "course1_description_en_US",
      "id": "00000000-0000-0000-0000-000000000011",
      "language": "en_US",
      "link": "http://link.com",
      "name": "course1_en_US",
    },
    Object {
      "description": "course1_description_fi_FI",
      "id": "00000000-0000-0000-0000-000000000012",
      "language": "fi_FI",
      "link": "http:/link.fi.com",
      "name": "course1_fi_FI",
    },
  ],
  "course_variants": Array [],
  "ects": null,
  "end_date": "12/31/2100",
  "exercise_completions_needed": 1,
  "exercises": Array [
    Object {
      "deleted": false,
      "id": "50000000-0000-0000-0000-000000000003",
      "name": "exercise 3",
    },
  ],
  "has_certificate": false,
  "hidden": null,
  "id": Any<String>,
  "inherit_settings_from": null,
  "name": "course1",
  "open_university_registration_links": Array [
    Object {
      "course_code": "alias",
      "id": "e3eea9b5-1ff1-47f8-94f4-269c7a092d93",
      "language": "en_US",
      "link": "avoin-link",
    },
  ],
  "order": null,
  "photo": Object {
    "compressed": "webp",
    "compressed_mimetype": "image/webp",
    "id": "00000000-0000-0000-0000-000000001101",
    "uncompressed": "jpeg",
    "uncompressed_mimetype": "image/jpeg",
  },
  "points_needed": 3,
  "promote": null,
  "slug": "course1",
  "start_date": "01/01/1900",
  "start_point": null,
  "status": "Upcoming",
  "study_module_order": null,
  "study_module_start_point": null,
  "study_modules": Array [
    Object {
      "id": "00000000-0000-0000-0000-000000000101",
    },
    Object {
      "id": "00000000-0000-0000-0000-000000000102",
    },
  ],
  "support_email": null,
  "teacher_in_charge_email": "e@mail.com",
  "teacher_in_charge_name": "teacher1",
  "tier": null,
  "upcoming_active_link": false,
  "user_course_settings_visibilities": Array [],
}
`;

exports[`Course queries course admin returns full course on id and slug 2`] = `
Object {
  "automatic_completions": true,
  "automatic_completions_eligible_for_ects": true,
  "completions_handled_by": null,
  "course_aliases": Array [
    Object {
      "course_code": "alias",
      "id": "67000000-0000-0000-0000-000000000001",
    },
  ],
  "course_tags": Array [
    Object {
      "tag": Object {
        "color": "#ff0000",
        "id": "48100000-0000-0000-0000-000000000001",
        "tag_translations": Array [
          Object {
            "description": "tag1 description",
            "language": "en_US",
            "name": "tag1 in english",
          },
          Object {
            "description": "tag1 kuvaus",
            "language": "fi_FI",
            "name": "tag1 in finnish",
          },
        ],
      },
    },
    Object {
      "tag": Object {
        "color": "#00ff00",
        "id": "48100000-0000-0000-0000-000000000002",
        "tag_translations": Array [
          Object {
            "description": "tag2 description",
            "language": "en_US",
            "name": "tag2 in english",
          },
          Object {
            "description": "tag2 kuvaus",
            "language": "fi_FI",
            "name": "tag2 in finnish",
          },
        ],
      },
    },
  ],
  "course_translations": Array [
    Object {
      "description": "course1_description_en_US",
      "id": "00000000-0000-0000-0000-000000000011",
      "language": "en_US",
      "link": "http://link.com",
      "name": "course1_en_US",
    },
    Object {
      "description": "course1_description_fi_FI",
      "id": "00000000-0000-0000-0000-000000000012",
      "language": "fi_FI",
      "link": "http:/link.fi.com",
      "name": "course1_fi_FI",
    },
  ],
  "course_variants": Array [],
  "ects": null,
  "end_date": "12/31/2100",
  "exercise_completions_needed": 1,
  "exercises": Array [
    Object {
      "deleted": false,
      "id": "50000000-0000-0000-0000-000000000003",
      "name": "exercise 3",
    },
  ],
  "has_certificate": false,
  "hidden": null,
  "id": Any<String>,
  "inherit_settings_from": null,
  "name": "course1",
  "open_university_registration_links": Array [
    Object {
      "course_code": "alias",
      "id": "e3eea9b5-1ff1-47f8-94f4-269c7a092d93",
      "language": "en_US",
      "link": "avoin-link",
    },
  ],
  "order": null,
  "photo": Object {
    "compressed": "webp",
    "compressed_mimetype": "image/webp",
    "id": "00000000-0000-0000-0000-000000001101",
    "uncompressed": "jpeg",
    "uncompressed_mimetype": "image/jpeg",
  },
  "points_needed": 3,
  "promote": null,
  "slug": "course1",
  "start_date": "01/01/1900",
  "start_point": null,
  "status": "Upcoming",
  "study_module_order": null,
  "study_module_start_point": null,
  "study_modules": Array [
    Object {
      "id": "00000000-0000-0000-0000-000000000101",
    },
    Object {
      "id": "00000000-0000-0000-0000-000000000102",
    },
  ],
  "support_email": null,
  "teacher_in_charge_email": "e@mail.com",
  "teacher_in_charge_name": "teacher1",
  "tier": null,
  "upcoming_active_link": false,
  "user_course_settings_visibilities": Array [],
}
`;

exports[`Course queries course admin should include deleted exercises if specified 1`] = `
Object {
  "automatic_completions": true,
  "automatic_completions_eligible_for_ects": true,
  "completions_handled_by": null,
  "course_aliases": Array [
    Object {
      "course_code": "alias",
      "id": "67000000-0000-0000-0000-000000000001",
    },
  ],
  "course_tags": Array [
    Object {
      "tag": Object {
        "color": "#ff0000",
        "id": "48100000-0000-0000-0000-000000000001",
        "tag_translations": Array [
          Object {
            "description": "tag1 description",
            "language": "en_US",
            "name": "tag1 in english",
          },
          Object {
            "description": "tag1 kuvaus",
            "language": "fi_FI",
            "name": "tag1 in finnish",
          },
        ],
      },
    },
    Object {
      "tag": Object {
        "color": "#00ff00",
        "id": "48100000-0000-0000-0000-000000000002",
        "tag_translations": Array [
          Object {
            "description": "tag2 description",
            "language": "en_US",
            "name": "tag2 in english",
          },
          Object {
            "description": "tag2 kuvaus",
            "language": "fi_FI",
            "name": "tag2 in finnish",
          },
        ],
      },
    },
  ],
  "course_translations": Array [
    Object {
      "description": "course1_description_en_US",
      "id": "00000000-0000-0000-0000-000000000011",
      "language": "en_US",
      "link": "http://link.com",
      "name": "course1_en_US",
    },
    Object {
      "description": "course1_description_fi_FI",
      "id": "00000000-0000-0000-0000-000000000012",
      "language": "fi_FI",
      "link": "http:/link.fi.com",
      "name": "course1_fi_FI",
    },
  ],
  "course_variants": Array [],
  "ects": null,
  "end_date": "12/31/2100",
  "exercise_completions_needed": 1,
  "exercises": Array [
    Object {
      "deleted": false,
      "id": "50000000-0000-0000-0000-000000000003",
      "name": "exercise 3",
    },
    Object {
      "deleted": true,
      "id": "50000000-0000-0000-0000-000000000004",
      "name": "deleted exercise 4",
    },
  ],
  "has_certificate": false,
  "hidden": null,
  "id": "00000000-0000-0000-0000-000000000002",
  "inherit_settings_from": null,
  "name": "course1",
  "open_university_registration_links": Array [
    Object {
      "course_code": "alias",
      "id": "e3eea9b5-1ff1-47f8-94f4-269c7a092d93",
      "language": "en_US",
      "link": "avoin-link",
    },
  ],
  "order": null,
  "photo": Object {
    "compressed": "webp",
    "compressed_mimetype": "image/webp",
    "id": "00000000-0000-0000-0000-000000001101",
    "uncompressed": "jpeg",
    "uncompressed_mimetype": "image/jpeg",
  },
  "points_needed": 3,
  "promote": null,
  "slug": "course1",
  "start_date": "01/01/1900",
  "start_point": null,
  "status": "Upcoming",
  "study_module_order": null,
  "study_module_start_point": null,
  "study_modules": Array [
    Object {
      "id": "00000000-0000-0000-0000-000000000101",
    },
    Object {
      "id": "00000000-0000-0000-0000-000000000102",
    },
  ],
  "support_email": null,
  "teacher_in_charge_email": "e@mail.com",
  "teacher_in_charge_name": "teacher1",
  "tier": null,
  "upcoming_active_link": false,
  "user_course_settings_visibilities": Array [],
}
`;

exports[`Course queries course normal user returns correct language 1`] = `
Object {
  "description": "course1_description_en_US",
  "id": Any<String>,
  "link": "http://link.com",
  "name": "course1_en_US",
  "slug": "course1",
}
`;

exports[`Course queries course normal user returns course on id and slug 1`] = `
Object {
  "description": "",
  "id": Any<String>,
  "link": "",
  "name": "course1",
  "slug": "course1",
}
`;

exports[`Course queries course normal user returns course on id and slug 2`] = `
Object {
  "description": "",
  "id": Any<String>,
  "link": "",
  "name": "course1",
  "slug": "course1",
}
`;

exports[`Course queries courses filters handledBy: courses-hidden-foo 1`] = `Array []`;

exports[`Course queries courses filters handledBy: courses-hidden-handler 1`] = `
Array [
  "00000000-0000-0000-0000-000000000667",
]
`;

exports[`Course queries courses filters hidden: courses-hidden-false 1`] = `
Array [
  "00000000-0000-0000-0000-000000000001",
  "00000000-0000-0000-0000-000000000002",
  "00000000-0000-0000-0000-000000000666",
]
`;

exports[`Course queries courses filters hidden: courses-hidden-null 1`] = `
Array [
  "00000000-0000-0000-0000-000000000001",
  "00000000-0000-0000-0000-000000000002",
  "00000000-0000-0000-0000-000000000666",
]
`;

exports[`Course queries courses filters hidden: courses-hidden-true 1`] = `
Array [
  "00000000-0000-0000-0000-000000000001",
  "00000000-0000-0000-0000-000000000002",
  "00000000-0000-0000-0000-000000000666",
  "00000000-0000-0000-0000-000000000667",
  "00000000-0000-0000-0000-000000000668",
]
`;

exports[`Course queries courses returns courses 1`] = `
Array [
  Object {
    "course_translations": Array [
      Object {
        "id": "00000000-0000-0000-0000-000000000022",
        "language": "fi_FI",
        "name": "course2_fi_FI",
      },
    ],
    "description": "",
    "hidden": null,
    "id": "00000000-0000-0000-0000-000000000001",
    "link": "",
    "name": "course2",
    "order": null,
    "photo": null,
    "promote": null,
    "slug": "course2",
    "start_point": null,
    "status": "Upcoming",
    "study_module_order": null,
    "study_module_start_point": null,
    "study_modules": Array [
      Object {
        "id": "00000000-0000-0000-0000-000000000102",
        "slug": "module1",
      },
    ],
    "upcoming_active_link": false,
    "user_course_settings_visibilities": Array [],
  },
  Object {
    "course_translations": Array [
      Object {
        "id": "00000000-0000-0000-0000-000000000011",
        "language": "en_US",
        "name": "course1_en_US",
      },
      Object {
        "id": "00000000-0000-0000-0000-000000000012",
        "language": "fi_FI",
        "name": "course1_fi_FI",
      },
    ],
    "description": "",
    "hidden": null,
    "id": "00000000-0000-0000-0000-000000000002",
    "link": "",
    "name": "course1",
    "order": null,
    "photo": Object {
      "compressed": "webp",
      "id": "00000000-0000-0000-0000-000000001101",
      "uncompressed": "jpeg",
    },
    "promote": null,
    "slug": "course1",
    "start_point": null,
    "status": "Upcoming",
    "study_module_order": null,
    "study_module_start_point": null,
    "study_modules": Array [
      Object {
        "id": "00000000-0000-0000-0000-000000000101",
        "slug": "module2",
      },
      Object {
        "id": "00000000-0000-0000-0000-000000000102",
        "slug": "module1",
      },
    ],
    "upcoming_active_link": false,
    "user_course_settings_visibilities": Array [],
  },
  Object {
    "course_translations": Array [],
    "description": "",
    "hidden": false,
    "id": "00000000-0000-0000-0000-000000000666",
    "link": "",
    "name": "handler",
    "order": null,
    "photo": null,
    "promote": null,
    "slug": "handler",
    "start_point": null,
    "status": "Upcoming",
    "study_module_order": null,
    "study_module_start_point": null,
    "study_modules": Array [],
    "upcoming_active_link": false,
    "user_course_settings_visibilities": Array [],
  },
  Object {
    "course_translations": Array [],
    "description": "",
    "hidden": true,
    "id": "00000000-0000-0000-0000-000000000667",
    "link": "",
    "name": "handled",
    "order": null,
    "photo": null,
    "promote": null,
    "slug": "handled",
    "start_point": null,
    "status": "Upcoming",
    "study_module_order": null,
    "study_module_start_point": null,
    "study_modules": Array [],
    "upcoming_active_link": false,
    "user_course_settings_visibilities": Array [],
  },
  Object {
    "course_translations": Array [],
    "description": "",
    "hidden": true,
    "id": "00000000-0000-0000-0000-000000000668",
    "link": "",
    "name": "inherits",
    "order": null,
    "photo": null,
    "promote": null,
    "slug": "inherits",
    "start_point": null,
    "status": "Upcoming",
    "study_module_order": null,
    "study_module_start_point": null,
    "study_modules": Array [],
    "upcoming_active_link": false,
    "user_course_settings_visibilities": Array [],
  },
]
`;

exports[`Course queries courses returns courses filtered by language: courses-language-bogus 1`] = `Array []`;

exports[`Course queries courses returns courses filtered by language: courses-language-en_US 1`] = `
Array [
  Object {
    "course_translations": Array [
      Object {
        "id": "00000000-0000-0000-0000-000000000011",
        "language": "en_US",
        "name": "course1_en_US",
      },
      Object {
        "id": "00000000-0000-0000-0000-000000000012",
        "language": "fi_FI",
        "name": "course1_fi_FI",
      },
    ],
    "description": "course1_description_en_US",
    "hidden": null,
    "id": "00000000-0000-0000-0000-000000000002",
    "link": "http://link.com",
    "name": "course1",
    "order": null,
    "photo": Object {
      "compressed": "webp",
      "id": "00000000-0000-0000-0000-000000001101",
      "uncompressed": "jpeg",
    },
    "promote": null,
    "slug": "course1",
    "start_point": null,
    "status": "Upcoming",
    "study_module_order": null,
    "study_module_start_point": null,
    "study_modules": Array [
      Object {
        "id": "00000000-0000-0000-0000-000000000101",
        "slug": "module2",
      },
      Object {
        "id": "00000000-0000-0000-0000-000000000102",
        "slug": "module1",
      },
    ],
    "upcoming_active_link": false,
    "user_course_settings_visibilities": Array [],
  },
]
`;

exports[`Course queries courses returns courses filtered by language: courses-language-fi_FI 1`] = `
Array [
  Object {
    "course_translations": Array [
      Object {
        "id": "00000000-0000-0000-0000-000000000022",
        "language": "fi_FI",
        "name": "course2_fi_FI",
      },
    ],
    "description": "course2_description_fi_FI",
    "hidden": null,
    "id": "00000000-0000-0000-0000-000000000001",
    "link": "",
    "name": "course2",
    "order": null,
    "photo": null,
    "promote": null,
    "slug": "course2",
    "start_point": null,
    "status": "Upcoming",
    "study_module_order": null,
    "study_module_start_point": null,
    "study_modules": Array [
      Object {
        "id": "00000000-0000-0000-0000-000000000102",
        "slug": "module1",
      },
    ],
    "upcoming_active_link": false,
    "user_course_settings_visibilities": Array [],
  },
  Object {
    "course_translations": Array [
      Object {
        "id": "00000000-0000-0000-0000-000000000011",
        "language": "en_US",
        "name": "course1_en_US",
      },
      Object {
        "id": "00000000-0000-0000-0000-000000000012",
        "language": "fi_FI",
        "name": "course1_fi_FI",
      },
    ],
    "description": "course1_description_fi_FI",
    "hidden": null,
    "id": "00000000-0000-0000-0000-000000000002",
    "link": "http:/link.fi.com",
    "name": "course1",
    "order": null,
    "photo": Object {
      "compressed": "webp",
      "id": "00000000-0000-0000-0000-000000001101",
      "uncompressed": "jpeg",
    },
    "promote": null,
    "slug": "course1",
    "start_point": null,
    "status": "Upcoming",
    "study_module_order": null,
    "study_module_start_point": null,
    "study_modules": Array [
      Object {
        "id": "00000000-0000-0000-0000-000000000101",
        "slug": "module2",
      },
      Object {
        "id": "00000000-0000-0000-0000-000000000102",
        "slug": "module1",
      },
    ],
    "upcoming_active_link": false,
    "user_course_settings_visibilities": Array [],
  },
]
`;

exports[`Course queries courses returns courses ordered: courses-order-asc 1`] = `
Array [
  Object {
    "course_translations": Array [
      Object {
        "id": "00000000-0000-0000-0000-000000000011",
        "language": "en_US",
        "name": "course1_en_US",
      },
      Object {
        "id": "00000000-0000-0000-0000-000000000012",
        "language": "fi_FI",
        "name": "course1_fi_FI",
      },
    ],
    "description": "",
    "hidden": null,
    "id": "00000000-0000-0000-0000-000000000002",
    "link": "",
    "name": "course1",
    "order": null,
    "photo": Object {
      "compressed": "webp",
      "id": "00000000-0000-0000-0000-000000001101",
      "uncompressed": "jpeg",
    },
    "promote": null,
    "slug": "course1",
    "start_point": null,
    "status": "Upcoming",
    "study_module_order": null,
    "study_module_start_point": null,
    "study_modules": Array [
      Object {
        "id": "00000000-0000-0000-0000-000000000101",
        "slug": "module2",
      },
      Object {
        "id": "00000000-0000-0000-0000-000000000102",
        "slug": "module1",
      },
    ],
    "upcoming_active_link": false,
    "user_course_settings_visibilities": Array [],
  },
  Object {
    "course_translations": Array [
      Object {
        "id": "00000000-0000-0000-0000-000000000022",
        "language": "fi_FI",
        "name": "course2_fi_FI",
      },
    ],
    "description": "",
    "hidden": null,
    "id": "00000000-0000-0000-0000-000000000001",
    "link": "",
    "name": "course2",
    "order": null,
    "photo": null,
    "promote": null,
    "slug": "course2",
    "start_point": null,
    "status": "Upcoming",
    "study_module_order": null,
    "study_module_start_point": null,
    "study_modules": Array [
      Object {
        "id": "00000000-0000-0000-0000-000000000102",
        "slug": "module1",
      },
    ],
    "upcoming_active_link": false,
    "user_course_settings_visibilities": Array [],
  },
  Object {
    "course_translations": Array [],
    "description": "",
    "hidden": true,
    "id": "00000000-0000-0000-0000-000000000667",
    "link": "",
    "name": "handled",
    "order": null,
    "photo": null,
    "promote": null,
    "slug": "handled",
    "start_point": null,
    "status": "Upcoming",
    "study_module_order": null,
    "study_module_start_point": null,
    "study_modules": Array [],
    "upcoming_active_link": false,
    "user_course_settings_visibilities": Array [],
  },
  Object {
    "course_translations": Array [],
    "description": "",
    "hidden": false,
    "id": "00000000-0000-0000-0000-000000000666",
    "link": "",
    "name": "handler",
    "order": null,
    "photo": null,
    "promote": null,
    "slug": "handler",
    "start_point": null,
    "status": "Upcoming",
    "study_module_order": null,
    "study_module_start_point": null,
    "study_modules": Array [],
    "upcoming_active_link": false,
    "user_course_settings_visibilities": Array [],
  },
  Object {
    "course_translations": Array [],
    "description": "",
    "hidden": true,
    "id": "00000000-0000-0000-0000-000000000668",
    "link": "",
    "name": "inherits",
    "order": null,
    "photo": null,
    "promote": null,
    "slug": "inherits",
    "start_point": null,
    "status": "Upcoming",
    "study_module_order": null,
    "study_module_start_point": null,
    "study_modules": Array [],
    "upcoming_active_link": false,
    "user_course_settings_visibilities": Array [],
  },
]
`;

exports[`Course queries courses returns courses ordered: courses-order-desc 1`] = `
Array [
  Object {
    "course_translations": Array [],
    "description": "",
    "hidden": true,
    "id": "00000000-0000-0000-0000-000000000668",
    "link": "",
    "name": "inherits",
    "order": null,
    "photo": null,
    "promote": null,
    "slug": "inherits",
    "start_point": null,
    "status": "Upcoming",
    "study_module_order": null,
    "study_module_start_point": null,
    "study_modules": Array [],
    "upcoming_active_link": false,
    "user_course_settings_visibilities": Array [],
  },
  Object {
    "course_translations": Array [],
    "description": "",
    "hidden": false,
    "id": "00000000-0000-0000-0000-000000000666",
    "link": "",
    "name": "handler",
    "order": null,
    "photo": null,
    "promote": null,
    "slug": "handler",
    "start_point": null,
    "status": "Upcoming",
    "study_module_order": null,
    "study_module_start_point": null,
    "study_modules": Array [],
    "upcoming_active_link": false,
    "user_course_settings_visibilities": Array [],
  },
  Object {
    "course_translations": Array [],
    "description": "",
    "hidden": true,
    "id": "00000000-0000-0000-0000-000000000667",
    "link": "",
    "name": "handled",
    "order": null,
    "photo": null,
    "promote": null,
    "slug": "handled",
    "start_point": null,
    "status": "Upcoming",
    "study_module_order": null,
    "study_module_start_point": null,
    "study_modules": Array [],
    "upcoming_active_link": false,
    "user_course_settings_visibilities": Array [],
  },
  Object {
    "course_translations": Array [
      Object {
        "id": "00000000-0000-0000-0000-000000000022",
        "language": "fi_FI",
        "name": "course2_fi_FI",
      },
    ],
    "description": "",
    "hidden": null,
    "id": "00000000-0000-0000-0000-000000000001",
    "link": "",
    "name": "course2",
    "order": null,
    "photo": null,
    "promote": null,
    "slug": "course2",
    "start_point": null,
    "status": "Upcoming",
    "study_module_order": null,
    "study_module_start_point": null,
    "study_modules": Array [
      Object {
        "id": "00000000-0000-0000-0000-000000000102",
        "slug": "module1",
      },
    ],
    "upcoming_active_link": false,
    "user_course_settings_visibilities": Array [],
  },
  Object {
    "course_translations": Array [
      Object {
        "id": "00000000-0000-0000-0000-000000000011",
        "language": "en_US",
        "name": "course1_en_US",
      },
      Object {
        "id": "00000000-0000-0000-0000-000000000012",
        "language": "fi_FI",
        "name": "course1_fi_FI",
      },
    ],
    "description": "",
    "hidden": null,
    "id": "00000000-0000-0000-0000-000000000002",
    "link": "",
    "name": "course1",
    "order": null,
    "photo": Object {
      "compressed": "webp",
      "id": "00000000-0000-0000-0000-000000001101",
      "uncompressed": "jpeg",
    },
    "promote": null,
    "slug": "course1",
    "start_point": null,
    "status": "Upcoming",
    "study_module_order": null,
    "study_module_start_point": null,
    "study_modules": Array [
      Object {
        "id": "00000000-0000-0000-0000-000000000101",
        "slug": "module2",
      },
      Object {
        "id": "00000000-0000-0000-0000-000000000102",
        "slug": "module1",
      },
    ],
    "upcoming_active_link": false,
    "user_course_settings_visibilities": Array [],
  },
]
`;

exports[`Course queries handlerCourses returns correctly 1`] = `
Array [
  Object {
    "handles_completions_for": Array [
      Object {
        "id": "00000000-0000-0000-0000-000000000667",
      },
    ],
    "id": "00000000-0000-0000-0000-000000000666",
  },
]
`;
